@@ -101,13 +101,12 @@
 
 Makefile=${ac_file-Makefile}
 ml_config_shell=${CONFIG_SHELL-/bin/sh}
-ml_arguments="${ac_configure_args}"
 ml_realsrcdir=${srcdir}
 
 # Scan all the arguments and set all the ones we need.
 
 ml_verbose=--verbose
-for option in ${ml_arguments}
+for option in ${ac_configure_args}
 do
   case $option in
   --*) ;;
@@ -133,7 +132,7 @@ do
 	enableopt=`echo ${option} | sed 's:^--::;s:=.*$::;s:-:_:g'`
 	eval $enableopt="$optarg"
 	;;
-  --norecursion | --no*)
+  --norecursion | --no-recursion)
 	ml_norecursion=yes
 	;;
   --silent | --sil* | --quiet | --q*)
@@ -555,6 +554,10 @@ multi-do:
 				LIBCXXFLAGS="$(LIBCXXFLAGS) $${flags}" \
 				LDFLAGS="$(LDFLAGS) $${flags}" \
 				DESTDIR="$(DESTDIR)" \
+				INSTALL="$(INSTALL)" \
+				INSTALL_DATA="$(INSTALL_DATA)" \
+				INSTALL_PROGRAM="$(INSTALL_PROGRAM)" \
+				INSTALL_SCRIPT="$(INSTALL_SCRIPT)" \
 				$(DO)); then \
 		  true; \
 		else \
@@ -856,7 +859,7 @@ if [ -n "${multidirs}" ] && [ -z "${ml_norecursion}" ]; then
 
     if eval ${ml_config_env} ${ml_config_shell} ${ml_recprog} \
 	--with-multisubdir=${ml_dir} --with-multisrctop=${multisrctop} \
-	${ml_arguments} ${ml_srcdiroption} ; then
+	${ac_configure_args} ${ml_srcdiroption} ; then
       true
     else
       exit 1
